==> samuelpoiraud/robot/STM32/QS_branch/QS_uart.c <==
#include "QS_uart.h"
#include "QS_ports.h"
#include "../stm32f4xx_hal/stm32f4xx_hal_usart.h"
#include "../config/config_pin.h"
	#define USART_FOR_PRINTF	UART1_ID	//Default uart for output : 1.
	#define USART_FOR_PRINTF_PTR USART1
	#define USART_FOR_PRINTF_PTR USART2
	#define USART_FOR_PRINTF_PTR USART3
	#define USART_FOR_PRINTF_PTR USART4
	#define USART_FOR_PRINTF_PTR USART5
	#define USART_FOR_PRINTF_PTR USART6
	#define UART1_BAUDRATE 115200
	#define UART2_BAUDRATE 115200
	#define UART3_BAUDRATE 115200
	#define UART4_BAUDRATE 115200
	#define UART5_BAUDRATE 115200
	#define UART6_BAUDRATE 115200

static void UART_init(uart_id_e uart_id, uint32_t baudrate)
{
	assert(baudrate > 1000);
	assert(uart_id < UART_ID_NB);

	UART_HandleStructure[uart_id].Instance = (USART_TypeDef*)instance_array[uart_id];
	UART_HandleStructure[uart_id].Init.BaudRate = baudrate;
	UART_HandleStructure[uart_id].Init.WordLength = UART_WORDLENGTH_8B;
	UART_HandleStructure[uart_id].Init.StopBits = UART_STOPBITS_1;
	UART_HandleStructure[uart_id].Init.Parity = UART_PARITY_NONE;
	UART_HandleStructure[uart_id].Init.HwFlowCtl = UART_HWCONTROL_NONE;
	UART_HandleStructure[uart_id].Init.Mode = UART_MODE_TX_RX;
	UART_HandleStructure[uart_id].Init.OverSampling = UART_OVERSAMPLING_8;

	/*On applique les parametres d'initialisation ci-dessus */
	HAL_UART_Init(&UART_HandleStructure[uart_id]);

	/*Activation de l'UART */
	__HAL_UART_ENABLE(&UART_HandleStructure[uart_id]);
}

		void UART1_putc(Uint8 c)
		{
			static bool_e reentrance_detection = FALSE;

			if(reentrance_detection)
				return;					//Si printf en IT pendant un printf, on abandonne le caractère du printf en IT..

			reentrance_detection = TRUE;
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART1_ID], USART_IT_TXE))
				HAL_USART_Transmit_IT(&UART_HandleStructure[UART1_ID], c, 1);
			else
			{
				//mise en buffer + activation IT U1TX.

				assert(buffer1tx.nb_datas < buffer1tx.size + 1);
				//Critical section (Interrupt inibition)

				while(buffer1tx.nb_datas >= buffer1tx.size);	//ON BLOQUE ICI*
				//Si vous êtes bloqués ici....... vérifiez qu'aucun printf n'est fait en IT...

				HAL_NVIC_DisableIRQ(USART1_IRQn);	//On interdit la préemption ici.. pour éviter les Read pendant les Write.

				if(buffer1tx.nb_datas < buffer1tx.size)
				{
					buffer1tx.datas[buffer1tx.index_write] = c;
					buffer1tx.index_write = (buffer1tx.index_write>=buffer1tx.size-1)?0:(buffer1tx.index_write + 1);
					buffer1tx.nb_datas++;
				}

				HAL_NVIC_EnableIRQ(USART1_IRQn);	//On active l'IT sur TX... lors du premier caractère à envoyer...
				__HAL_USART_ENABLE_IT(__HAL_USART_GET_FLAG, USART_IT_TXE);
			}
			reentrance_detection = FALSE;
		}

		void UART1_putc(Uint8 mes)
		{
			while(__HAL_USART_GET_FLAG(__HAL_USART_GET_FLAG, USART_FLAG_TXE) == RESET);
			HAL_USART_Transmit(&UART_HandleStructure[UART1_ID], mes, 1, 100);
		}

		void UART2_putc(Uint8 c)
		{
			if(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART2_ID], USART_IT_TXE))
				HAL_USART_Transmit_IT(&UART_HandleStructure[UART2_ID], c, 1);
			else
			{
				//mise en buffer + activation IT U2TX.

				assert(buffer2tx.nb_datas < buffer2tx.size + 1);
				//Critical section (Interrupt inibition)

				while(buffer2tx.nb_datas >= buffer2tx.size);	//ON BLOQUE ICI

				AHL_NVIC_DisableIRQ(USART2_IRQn);	//On interdit la préemption ici.. pour éviter les Read pendant les Write.

				if(buffer2tx.nb_datas < buffer2tx.size)
				{
					buffer2tx.datas[buffer2tx.index_write] = c;
					buffer2tx.index_write = (buffer2tx.index_write>=buffer2tx.size-1)?0:(buffer2tx.index_write + 1);
					buffer2tx.nb_datas++;
				}

				HAL_NVIC_EnableIRQ(USART2_IRQn);	//On active l'IT sur TX... lors du premier caractère à envoyer...
				__HAL_USART_ENABLE_IT(&UART_HandleStructure[UART2_ID],USART_IT_TXE);
			}
		}

		void UART2_putc(Uint8 mes)
		{
			while(__HAL_USART_GET_IT_SOURCE(&UART_HandleStructure[UART2_ID], USART_FLAG_TXE) == RESET);
			HAL_USART_Transmit(&UART_HandleStructure[UART2_ID], mes, 1, 100);
		}
