==> samuelpoiraud/robot/DSPIC30F/QS/QS_uart.c <==
#include "QS_uart.h"
#include <uart.h>
	#define UART_SPEED 64
	#define UART_SPEED 128
	#define UART_SPEED 256
	#define UART_SPEED 50	//49.536

void UART_init(void)
{
	static bool_e initialized = FALSE;
	if(initialized)
		return;
	initialized = TRUE;

	Sint16 U1MODEvalue;
	Sint16 U1STAvalue;
	U1MODEvalue = UART_EN & UART_IDLE_CON &
		UART_DIS_WAKE & UART_DIS_LOOPBACK &
		UART_DIS_ABAUD & UART_NO_PAR_8BIT &
		UART_1STOPBIT;
	U1STAvalue = UART_INT_TX &
		UART_TX_PIN_NORMAL &
		UART_TX_ENABLE &
		UART_INT_RX_CHAR &
		UART_ADR_DETECT_DIS &
		UART_RX_OVERRUN_CLEAR ;

	#ifdef USE_UART1
		OpenUART1(U1MODEvalue, U1STAvalue, UART_SPEED);
		ConfigIntUART1(UART_RX_INT_DIS & UART_RX_INT_PR4 &
			UART_TX_INT_DIS & UART_TX_INT_PR3);
		DisableIntU1TX;
		#ifdef USE_UART1RXINTERRUPT
			EnableIntU1RX;
			m_u1rxnum = 0;
			m_u1rx =0;
		#else
			DisableIntU1RX;
		#endif /* def USE_UART1RXINTERRUPT */
	
	#endif /* def USE_UART1 */

	#ifdef USE_UART2
		OpenUART2(U1MODEvalue, U1STAvalue, UART_SPEED);
		ConfigIntUART2(UART_RX_INT_DIS & UART_RX_INT_PR4 &
			UART_TX_INT_DIS & UART_TX_INT_PR3);
		DisableIntU2TX;
		#ifdef USE_UART2RXINTERRUPT
			EnableIntU2RX;
			m_u2rxnum = 0;
			m_u2rx =0;
		#else
			DisableIntU2RX;
		#endif /* def USE_UART2RXINTERRUPT */
	#endif /* def USE_UART2 */
}

		void UART1_putc(Uint8 c)
		{
			if(!BusyUART1())
				putcUART1(c);
			else
			{
				assert(buffer1tx.nb_datas < buffer1tx.size + 1);
				//Critical section (Interrupt inibition)

				while(buffer1tx.nb_datas >= buffer1tx.size);	//ON BLOQUE ICI

				DisableIntU1TX;	//On interdit la préemption ici.. pour éviter les Read pendant les Write.



				if(buffer1tx.nb_datas < buffer1tx.size)
					{
						buffer1tx.datas[buffer1tx.index_write] = c;
						buffer1tx.index_write = (buffer1tx.index_write>=buffer1tx.size-1)?0:(buffer1tx.index_write + 1);
						buffer1tx.nb_datas++;
					}
				EnableIntU1TX;	//On active l'IT sur TX... lors du premier caractère à envoyer...
			}
				//mise en buffer + activation IT U1TX.
		}

		void UART1_putc(Uint8 mes)
		{
			while(BusyUART1());
			putcUART1(mes);
		}

	void UART2_putc(Uint8 mes)
	{
		while(BusyUART2());
		putcUART2(mes);
	}
